--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: black;
+    color: aliceblue;
+
 }
 
 .site-header {
@@ -56,10 +59,10 @@ body {
 
 }
 
-.events {
-    margin-top: 20px;
-    padding: 40px 20px;
-    border-radius: 25px;
+.event img{
+    width: 100%;
+
+
 }
 
 .event {
@@ -71,42 +74,45 @@ body {
 
 }
 
-.event img{
+.events-flexbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
+    padding: 40px 20px;
+    border-radius: 25px;
+
+
+}
+
+.events-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    padding: 40px 20px;
+    border-radius: 25px;
+
+
+}
+
+.event-page{
+    max-width: 300px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 15px;
+    border: black 1px solid;
+
+}
+
+.event-page img{
     width: 100%;
 
 
 }
 
-.event-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-
-
-@media screen and (max-width: 768px ) {
-    .event-grid {
-        grid-template-columns:  1fr 1fr 1fr;
-    } 
-    
-}
-
-@media screen and (max-width: 600px ) {
-    .event-grid {
-        grid-template-columns:  1fr;
-    } 
-    
-}
-
-.events-flexbox {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-}
-
 .site-footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     background-color: grey;
@@ -115,4 +121,20 @@ body {
     padding: 10px;
     padding-bottom: 0px;
 
+}
+
+
+
+@media screen and (max-width: 768px ) {
+    .events {
+        flex-direction:  1fr 1fr 1fr;
+    } 
+    
+}
+
+@media screen and (max-width: 600px ) {
+    .events-flexbox {
+        flex-direction: column;
+    } 
+    
 }
