--- a/style.css
+++ b/style.css
@@ -6,8 +6,45 @@ body {
   background-color: black;
   color: aliceblue;
 }
+.header-banner {
+  position: relative;
+  height: 300px; 
+  background-image: url(https://cdn.prod.website-files.com/609445b9eb43c95f4a0b0e7b/66ee121fe2764e20a3d872c8_CalendarBG.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+}
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .site-header {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  padding: 20px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  color: white;
+}
+
+/*.site-header {
   display: flex;
   align-items: center;
   padding: 15px 20px;
@@ -19,7 +56,7 @@ body {
   color: white;
   font-size: 1.5rem;
   font-weight: bold;
-}
+}*/
 
 .navbar a {
   display: flex;
