--- a/style.css
+++ b/style.css
@@ -65,11 +65,11 @@ body {
 }
 
 .event img {
-  width: 100%;
+  width: 80%;
 }
 
 .event {
-  max-width: 300px;
+  max-width: 50%;
   padding: 20px;
   text-align: center;
   border-radius: 15px;
@@ -112,7 +112,7 @@ body {
 }
 
 .event-page img {
-  width: 50vh;
+  width: 50%;
   height: auto;
   border-radius: 6px;
   object-fit: cover;
