--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ body {
 }
 
 .event img {
-  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; 
+  width: 100%;
+  height: 100;
 }
 
 .event {
@@ -84,6 +88,8 @@ body {
   margin-top: 20px;
   padding: 40px 20px;
   border-radius: 25px;
+  width: 80%;
+  height: 80%;
 }
 
 * {
@@ -132,6 +138,33 @@ body {
 .event-details p {
   font-size: 16px;
   margin: 5px 0 0;
+}
+.events-page-header-gallery {
+    display: flex;
+    text-align: center;
+    width: 80%;
+    height: 80%;
+}
+.events-page-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80%;
+    height: 80%;
+}
+
+
+.events-page-gallery img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.events-page-gallery img:hover {
+  transform: scale(1.05);
 }
 
 .event-page:hover {
