--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 
-body {
+html body {
   margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background-color: black;
   color: aliceblue;
 }
@@ -228,27 +229,78 @@ body {
 
 .contact-form {
   display: flex;
-  background-color: rgb(1, 39, 27);
-  padding: 40px 20px;
-  color: white;
-  border-radius: 25px;
-  text-align: center;
-  justify-content: center;
-  margin: 0 auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  max-width: 60%;
-}
-.form-name-email {
-  display: block;
+  flex-direction: column;
   align-items: center;
-  align-content: center;
-  margin-bottom: 5px;
-  width: 100%;
-  max-width: 400px;
-  font-weight: bold;
-  font-size: 1rem;
+  justify-content: center;
+  padding: 40px 20px;
+  background-color: rgb(1, 39, 27);
+  border-radius: 25px;
+  color: white;
+  max-width: 60%;
+  margin: 40px auto;
 }
+
+.contact-form h1 {
+  margin-bottom: 20px;
+}
+
+.contact-form form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.contact-form button {
+  padding: 12px;
+  background-color: #ffd700;
+  color: black;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.contact-form button:hover {
+  background-color: #e6c200;
+}
+
+.contact-form-paragraph {
+  margin-top: 15px;
+  margin-bottom: 40px;
+  font-weight: bold;
+}
+.checkbox-group {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+
+.checkbox-group label {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  white-space: nowrap;
+  color: white; 
+}
+
 
 .location-wrapper {
   display: flex;
@@ -257,16 +309,17 @@ body {
   padding: 20px;
 }
 
-/* Main map/content area */
+
 .location {
-  flex: 1;
+  flex: 7;
+  align-items: center;
+  justify-items: center;
   background-color: rgb(14, 0, 0);
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Sidebar content */
 .location-sidebar {
   flex: 3;
   background-color: #013f2b;
@@ -276,7 +329,7 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* Side bar img */
+
 
 .location-sidebar-img {
   width: 100%;
