--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* Styling for the entire html and body */
 html body {
   margin: 0;
   padding: 0;
@@ -9,10 +9,11 @@ html body {
   color: aliceblue;
 }
 
+/* creating menu - toggle styling */
+
 .menu-toggle {
   display: none;
 }
-
 
 .hamburger {
   display: none;
@@ -20,6 +21,8 @@ html body {
   color: white;
   cursor: pointer;
 }
+
+/* Header and navbar */
 
 .site-header {
   display: flex;
@@ -29,10 +32,9 @@ html body {
   background-color: rgb(1, 39, 27);
 }
 .navbar {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .site-logo {
@@ -56,7 +58,6 @@ html body {
   text-decoration: none;
   transform: scale(1.5);
   transition: transfrom 0.3s ease-in;
-
 }
 
 .navbar ul {
@@ -74,6 +75,8 @@ html body {
   padding: 20px;
 }
 
+/* Welcome header and paraghraph */
+
 .welcome {
   background-color: rgb(1, 39, 27);
   padding: 40px 20px;
@@ -87,6 +90,8 @@ html body {
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+/* Event highlights */
 
 .events-header {
   display: flex;
@@ -102,7 +107,7 @@ html body {
 }
 
 .event {
-  flex: 1 1 30%;  
+  flex: 1 1 30%;
   max-width: 30%;
   min-width: 30%;
   padding: 20px;
@@ -130,14 +135,14 @@ html body {
   transform: scale(1.03);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
   border-color: #ffd700;
-
 }
-
 
 * {
   box-sizing: border-box;
   border-radius: 10px;
 }
+
+/* Events page styling */
 
 .events-page {
   padding: 40px 20px;
@@ -146,7 +151,7 @@ html body {
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
+  border-radius: 25px;
 }
 
 .events-page h1 {
@@ -227,6 +232,8 @@ html body {
   padding-bottom: 10px;
 }
 
+/* Contact form styling */
+
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -298,9 +305,8 @@ html body {
   align-items: center;
   gap: 15px;
   white-space: nowrap;
-  color: white; 
+  color: white;
 }
-
 
 .location-wrapper {
   display: flex;
@@ -309,6 +315,7 @@ html body {
   padding: 20px;
 }
 
+/* Location page */
 
 .location {
   flex: 7;
@@ -328,8 +335,6 @@ html body {
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
-
-
 
 .location-sidebar-img {
   width: 100%;
@@ -359,6 +364,7 @@ html body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+/* Menu table styling */
 .menu-table th,
 td {
   padding: 12px 20px;
@@ -403,9 +409,9 @@ html {
   scroll-behavior: smooth;
 }
 .event-link {
-    text-decoration: none;
-    color: inherit;
-    display: block;
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 @media (max-width: 900px) {
   .event {
